# HyperFetch

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  DISCLAIMER.md  HyperFetch.spec  IDM.bat  LICENSE  MANIFEST.in  MANUAL_TESTING_CHECKLIST.md  PRIVACY.md  README.md  REAL_WEBSITE_TESTING_GUIDE.md  STORE_LISTING.md  SmartDownloadManager.spec  TESTING_GUIDE.md  TESTING_OVERVIEW.md  TESTING_SUMMARY.md  TEST_REPORT.md  api_server.py  build.ps1  crash_reporter.py  doh.py  downloader.py  history.py  hls.py  installer.iss  main.py  pyproject.toml  pytest.ini  queue_manager.py  requirements-dev.txt  requirements.txt  task.py  test_comprehensive.py  test_core.py  test_e2e.py  torrent.py  updater.py  upnp.py  (+2 more)
.claude/: settings.local.json
chrome_ext/: background.js  content.js  manifest.json  popup.html  popup.js
docs/: uninstall.html
edge_ext/: background.js  content.js  manifest.json  popup.html  popup.js  welcome.html  welcome.js
gui/: delegates.py  dialogs.py  icons.py  main_window.py  models.py  theme.py
gui2/: __init__.py  action_bar.py  app.py  app_actions.py  app_settings.py  app_shortcuts.py  app_system.py  brand.py  command_palette.py  details_drawer.py  download_card.py  download_list.py  graphing.py  palette.py  search.py  sidebar.py  speed_gauge.py  toast.py
tests/: conftest.py  test_api_server.py  test_crash_reporter.py  test_downloader.py  test_extension.py  test_format_helpers.py  test_gui.py  test_hls.py  test_host_rules.py  test_queue_manager.py  test_search.py  test_security.py  test_task.py  test_torrent.py  test_updater.py  test_utils.py
(+17 files in other folders)
